force-app/main/default/objects/OutreachSourceCode/fields/Acquisition_type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_type__c</fullName>
    <label>Acquisition type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>