force-app/main/default/objects/OutreachSourceCode/fields/Giving_Page__c.field-meta.xml
<CustomField>
    <fullName>Giving_Page__c</fullName>
    <label>Giving Page</label>
    <type>Url</type>
</CustomField>