force-app/main/default/objects/OutreachSourceCode/fields/Message_Channel__c.field-meta.xml
<CustomField>
    <fullName>Message_Channel__c</fullName>
    <label>Message Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital/Web</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Door Drop</fullName>
            </value>
            <value>
                <fullName>DRTV</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face-to-face</fullName>
            </value>
            <value>
                <fullName>Press Ad</fullName>
            </value>
            <value>
                <fullName>Press Insert</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>