force-app/main/default/objects/OutreachSourceCode/fields/sj_Filesource__c.field-meta.xml
<CustomField>
    <fullName>sj_Filesource__c</fullName>
    <label>sj_Filesource__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>