force-app/main/default/objects/OutreachSourceCode/fields/sj_UI_OutreachSourcecode__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_OutreachSourcecode__c</fullName>
    <externalId>true</externalId>
    <label>sj_UI_OutreachSourcecode__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>