force-app/main/default/objects/OutreachSourceCode/fields/Unique_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Unique_Tracking_URL__c</fullName>
    <formula>Giving_Page__c &amp; &quot;?custom_campaign_gyl2Rcdo3iyGaF9=&quot; &amp; CampaignId &amp; &quot;&amp;custom_4iTgaBwgECeAOdU=&quot; &amp;  Id &amp; &quot;&amp;custom_njigQpQL2fVlSzI=&quot; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Tracking URL</label>
    <type>Text</type>
</CustomField>