force-app/main/default/objects/OutreachSourceCode/listViews/All_OutreachSourceCodes.listView-meta.xml
<ListView>
    <fullName>All_OutreachSourceCodes</fullName>
    <columns>Name</columns>
    <columns>Campaign</columns>
    <columns>Status</columns>
    <columns>SourceCode</columns>
    <columns>AudienceCount</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Outreach Source Codes</label>
</ListView>